fixed heading spacing from navbar

--- a/site.css
+++ b/site.css
@@ -39,7 +39,7 @@ nav li a:hover {
     background-color: orange;
 }
 
-article {
+#content {
     clear: both;
 }
 
